Development
	Use allocation method to set media size rather than expose
	Setup player to protect aspect ratio of media being played
	Cleanup unused callbacks
	Cleanup extra pixbufs
	Try to use icons from theme, but if that fails, use the default set
	Add default icons to build
	If playing audio after playing video, shrink window
	Disable Fullscreen option when no video is present
	Fix problems with icons not being found in theme
	Reset error after use in icon loads
	Fix crash when clicking play when no file is loaded
	Add accelerators to main menu items and to Show Controls and Fullscreen
	Add accelerator " " (space) to toggle between playing and paused
	Add accelerator Ctrl-F (go fullscreen)
	Suppress GLib-CRITICAL **: g_ascii_strcasecmp: assertion `s1 != NULL' failed message
	Send 'Cancel' signal to controlid when window closed
	Updated es translation by Vicente Carro
	Change exposed dbus name to include control_id when given
	Cleanup dbus on terminate
	Swedish translation by Daniel Nylander
	Sent back Ready signal with control_id attached
0.4.3	Mar 12, 2007
	Fix pause problem when volume is changed
	Switch to using control_id for communication between browser and player
	Implement DBUS method GetCacheSize
	Implement DBUS signal SetCachePercent
	Implement more DBUS methods GetTime, GetDuration, GetPercent
	Implement more DBUS methods GetFullScreen, GetShowControls
	Implement DBUS introspection and several method calls.
	Allow setting cache size using slider bar in preferences dialog
	Fix update-po process
	DBus methods FastForward, FastReverse, Seek
	Update volume control so that we can set it before the media starts playing
	More GNOMEification
	Added Quit to the right click menu
	Changed file selector to GNOME selector (Louis-Francis Ratté-Boulianne)
0.4.2	Feb 22, 2007
	When streaming and stopped... kill the thread
	Only show media length when we know it
	Implement DBUS Signal	
		ResizeWindow int32: int32: