@@ -1,4 +1,5 @@
 Development
+	Remove hookup_x11_events as it is no longer needed
 	Use allocation method to set media size rather than expose
 	Setup player to protect aspect ratio of media being played
 	Cleanup unused callbacks
